--- a/app/views/edit.html
+++ b/app/views/edit.html
@@ -17,13 +17,26 @@
             id="desc"></textarea>
     </p>
 
+
+    <p ng-repeat="action in ctrl.step.actions track by $index">
+
+        <label for="">name</label>
+        <input type="text" ng-model="action.name">
+
+        <label for="">type</label>
+        <select ng-model="action.type"
+            ng-options="typeAction for typeAction in ctrl.typeActions"></select>
+
+        <label for="">parameters</label>
+        <textarea ng-model="action.params"></textarea>
+
+        <button type="button" ng-click="ctrl.removeAction($index)">Delete</button>
+    </p>
+    <button type="button" ng-click="ctrl.addAction()">Add action</button>
+
     <p>
         <button type="submit">Save</button>
+        <button type="button" ng-click="ctrl.delete()">Delete</button>
     </p>
 
 </form>
-
-<!-- this.actions = ["go", "chest", "fight"] -->
-<!-- <select -->
-<!--     ng-model="toto" -->
-<!--     ng-options="action for action in ctrl.actions"></select> -->
